# tree-sitter-ini

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-omnetpp-ini.pc.in
bindings/c/tree_sitter/: tree-sitter-omnetpp-ini.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_omnetpp_ini/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOmnetppIniTests/: TreeSitterOmnetppIniTests.swift
queries/omnetpp_ini/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
