[package]
name = "tree-sitter-omnetpp-ini"
description = "Tree-sitter parser for OMNeT++ INI files"
version = "0.1.0"
authors = ["Johann Hanke"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "omnetpp-ini"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/hannhank/tree-sitter-ini"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
